Data is stored in persistance DB