@@ -1,26 +1,27 @@
 package com.gym.crm.dao.impl;
 
 import com.gym.crm.entity.Trainer;
-import com.gym.crm.entity.TrainingType;
-import com.gym.crm.storage.InMemoryStorage;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.TypedQuery;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 class TrainerDaoImplTest {
 
     @Mock
-    private InMemoryStorage<Trainer> storage;
+    private EntityManager entityManager;
 
     @InjectMocks
     private TrainerDaoImpl trainerDao;
@@ -31,41 +32,68 @@ class TrainerDaoImplTest {
     }
 
     @Test
-    void testSave() {
+    void testCreate() {
         Trainer trainer = new Trainer();
-        trainer.setFirstName("John");
-        trainer.setLastName("Doe");
-        trainer.setUsername("john.doe");
-        trainer.setPassword("password".toCharArray());
-        trainer.setActive(true);
-        trainer.setSpecialization(new TrainingType(UUID.randomUUID(),"Pull up"));
         trainerDao.create(trainer);
-        assertNotNull(trainer.getId());
-        verify(storage).put(trainer.getId(), trainer);
+        verify(entityManager).persist(trainer);
     }
 
     @Test
     void testFindById() {
-        UUID id = UUID.randomUUID();
+        UUID trainerId = UUID.randomUUID();
         Trainer trainer = new Trainer();
-        when(storage.get(id)).thenReturn(trainer);
-        Trainer result = trainerDao.findById(id);
+        when(entityManager.find(Trainer.class, trainerId)).thenReturn(trainer);
+        Trainer result = trainerDao.findById(trainerId);
         assertEquals(trainer, result);
     }
 
     @Test
     void testFindAll() {
-        Trainer trainer1 = new Trainer();
-        Trainer trainer2 = new Trainer();
-        when(storage.values()).thenReturn(List.of(trainer1, trainer2));
+        TypedQuery<Trainer> query = mock(TypedQuery.class);
+        when(entityManager.createQuery("FROM Trainer", Trainer.class)).thenReturn(query);
+        when(query.getResultList()).thenReturn(Collections.emptyList());
         List<Trainer> result = trainerDao.findAll();
-        assertEquals(2, result.size());
+        assertEquals(0, result.size());
+    }
+
+    @Test
+    void testUpdate() {
+        Trainer trainer = new Trainer();
+        trainerDao.update(trainer);
+        verify(entityManager).merge(trainer);
     }
 
     @Test
     void testDelete() {
-        UUID id = UUID.randomUUID();
-        trainerDao.delete(id);
-        verify(storage).remove(id);
+        UUID trainerId = UUID.randomUUID();
+        Trainer trainer = new Trainer();
+        when(entityManager.find(Trainer.class, trainerId)).thenReturn(trainer);
+        trainerDao.delete(trainerId);
+        verify(entityManager).remove(trainer);
+    }
+
+    @Test
+    void testFindByUsername() {
+        String username = "test.user";
+        Trainer trainer = new Trainer();
+        TypedQuery<Trainer> query = mock(TypedQuery.class);
+        when(entityManager.createQuery("SELECT t FROM Trainer t WHERE t.user.username = :username", Trainer.class)).thenReturn(query);
+        when(query.setParameter("username", username)).thenReturn(query);
+        when(query.getSingleResult()).thenReturn(trainer);
+        Trainer result = trainerDao.findByUsername(username);
+        assertEquals(trainer, result);
+    }
+
+    @Test
+    void testGetUnassignedTrainers() {
+        String traineeUsername = "test.trainee";
+        TypedQuery<Trainer> query = mock(TypedQuery.class);
+        when(entityManager.createQuery(
+                "SELECT t FROM Trainer t WHERE t.id NOT IN (" +
+                        "SELECT tr.trainer.id FROM Training tr WHERE tr.trainee.user.username = :traineeUsername)", Trainer.class)).thenReturn(query);
+        when(query.setParameter("traineeUsername", traineeUsername)).thenReturn(query);
+        when(query.getResultList()).thenReturn(Collections.emptyList());
+        List<Trainer> result = trainerDao.getUnassignedTrainers(traineeUsername);
+        assertEquals(0, result.size());
     }
 }
